--- a/www/style.css
+++ b/www/style.css
@@ -20,6 +20,18 @@ a {
 #info {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  width: 600px;
+  width: 800px;
+}
+
+#plot {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.right {
+  text-align: right;
+}
+
+.small {
+  font-size: 0.8rem;
 }
